# uplc-benchmark

./: .dir-locals.el  .gitignore  404.html  CONTRIBUTING.md  README.md  budget_buy_one.csv  budget_cancel_one.csv  budget_deposit.csv  budget_lp_mint_one_nft.csv  budget_lp_mint_two_nfts.csv  budget_nft_mint.csv  budget_swap_a_for_b.csv  budget_swap_b_for_a.csv  budget_withdraw.csv  comparison.html  default.nix  flake.nix  index.html  introduction.html  print.html  script_size.csv  searchindex.js  searchindex.json  specifications.html  toc.html  toc.js
implementations/aiken/: .envrc  .gitignore  Makefile  README.md  aiken.toml  default.nix  serialise.py
implementations/aiken/validators/: lp_minting_policy.ak  nft_marketplace.ak  nft_marketplace_validator.ak  nft_minting_policy.ak  pool_validator.ak
implementations/aiken_plutus-v3/: .gitignore  README.md
implementations/aiken_plutus-v3/validators/: pool_validator.ak
implementations/opshin/: .envrc  .gitignore  Makefile  README.md  default.nix
implementations/opshin/opshin/: default.nix
implementations/opshin/src/: lp_minting_policy.py  nft_marketplace_validator.py  nft_minting_policy.py  pool_validator.py
implementations/opshin/uplc/: default.nix
implementations/plu-ts/: .gitignore  default.nix  package-lock.json  tsconfig.json
implementations/plu-ts/src/: index.ts
implementations/plu-ts/src/validators/: lp_minting_policy.ts  nft_marketplace.ts  pool_validator.ts
implementations/plu-ts/src/validators/utils/: policyValueOf.ts  positiveOrZero.ts
implementations/plutarch/: .envrc  .gitattributes  .gitignore  .plan.nix  README.md  cabal.project  default.nix  hello-world.cabal  plutarch-implementation.cabal
implementations/plutarch/.materialized/: default.nix  plan.nix
implementations/plutarch/.materialized/.plan.nix/: hello-world.nix  plutarch-implementation.nix
implementations/plutarch/.materialized/cabal-files/: PyF.nix  adjunctions.nix  aeson.nix  algebraic-graphs.nix  barbies.nix  base-compat-batteries.nix  base-compat.nix  bifunctors.nix  bimap.nix  bin.nix  binary-orphans.nix  bitvec.nix  boring.nix  brick.nix  cardano-binary.nix  cardano-crypto-class.nix  cardano-crypto.nix  cardano-strict-containers.nix  cassava.nix  concurrent-output.nix  config-ini.nix  constraints-extras.nix  constraints.nix  criterion-measurement.nix  criterion.nix  dec.nix  dependent-map.nix  dependent-sum-template.nix  dependent-sum.nix  deriving-aeson.nix  deriving-compat.nix  doctest.nix  double-conversion.nix  fin.nix  foldl.nix  formatting.nix  foundation.nix  free.nix  generics-sop.nix  ghc-paths.nix  (+61 more)
implementations/plutarch/app/: Main.hs
implementations/plutarch/lib/UplcBenchmark/: LpMintingPolicy.hs  NftMarketplace.hs  NftMintingPolicy.hs  PPrelude.hs  PoolValidator.hs  Utils.hs
implementations/plutus-tx/: .envrc  .gitignore  README.md  cabal.project  default.nix  plutus-tx-implementation.cabal
implementations/plutus-tx/app/: Main.hs
implementations/plutus-tx/lib/UplcBenchmark/: LpMintingPolicy.hs  NftMarketplace.hs  NftMintingPolicy.hs  PoolValidator.hs  Utils.hs
nix/: README.md
nix/aiken/: aiken2bin.py  aiken2nix.py  default.nix  lib.nix
nix/fourmolu/: default.nix
nix/haskell/: default.nix  lib.nix  mk-hackage.nix
nix/lambda-buffers/: cabal.project  default.nix  haskell-proto.nix  lib.nix
nix/latex/: default.nix  lib.nix
nix/mdbook/: default.nix  lib.nix
nix/opshin/: default.nix  lib.nix
nix/plutarch/: default.nix  fix-plutarch.patch  lib.nix
nix/utils/: lib.nix
plu-ts/: .gitignore  package.json
plu-ts/src/: index.ts
plu-ts/src/validators/: nft_minting_policy.ts
specifications/: default.nix
specifications/dex/: .gitignore  bibliography.bib  dex.tex
specifications/nft-marketplace/: .gitignore  nft-marketplace.tex
styleguide/: haskell.md  latex.md
tests/: .envrc  .gitignore  README.md  budget_template.plt  cabal.project  default.nix  liqwid-libs-exports.patch  script_size.plt  uplc-benchmark.cabal
tests/app/: Main.hs
tests/csv2md/: default.nix
tests/src/: Spec.hs  UplcBenchmark.hs
tests/src/UplcBenchmark/: ExecutionUnits.hs  ScriptLoader.hs  ScriptSize.hs
tests/src/UplcBenchmark/Spec/: LpPolicy.hs  NftMarketplace.hs  PoolNftPolicy.hs  PoolValidator.hs
tests/src/UplcBenchmark/Spec/ContextBuilder/: Utils.hs
tests/test/: Spec.hs
types/: .gitignore  Dex.lbf  NftMarketplace.lbf  default.nix  uplc-types.cabal
website/: .gitignore  SUMMARY.md  book.toml  comparison.md  default.nix  introduction.md  specifications.md
