cabal-version:      3.0
name:               uplc-benchmark
version:            0.1.0.0
license:            GPL-3.0-or-later
author:             t4ccer
maintainer:         t4ccer@gmail.com
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common lang
  ghc-options:
    -Werror -Wall -Weverything -Wno-unused-packages -Wno-unused-do-bind
    -Wno-missing-safe-haskell-mode -Wno-implicit-prelude -Wno-unsafe
    -Wno-all-missed-specialisations

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    QualifiedDo
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns

  default-language:   Haskell2010

common exe-opts
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2

common deps
  build-depends:
    , base
    , bytestring
    , mtl
    , plutarch
    , plutus-core
    , plutus-ledger-api
    , text
    , uplc-benchmark-types-plutarch-lb
    , lbf-plutus-plutarch
    , plutus-core
    , filepath
    , tasty

test-suite uplc-benchmark-tests
  import:          lang, deps
  type:            exitcode-stdio-1.0
  main-is:         Spec.hs
  hs-source-dirs:  src
  other-modules:
    UplcBenchmark.ScriptLoader
    UplcBenchmark.Spec.NftMarketplace
  build-depends:
    , plutarch-context-builder
    , plutarch-quickcheck
    , plutarch-unit
