cabal-version:      3.0
name:               uplc-benchmark
version:            0.1.0.0
license:            GPL-3.0-or-later
author:             t4ccer
maintainer:         t4ccer@gmail.com
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common lang
  ghc-options:
    -Werror -Wall -Weverything -Wno-unused-packages -Wno-unused-do-bind
    -Wno-missing-safe-haskell-mode -Wno-implicit-prelude -Wno-unsafe
    -Wno-all-missed-specialisations

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    QualifiedDo
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns

  default-language:   Haskell2010

common exe-opts
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2

common deps
  build-depends:
    , aeson
    , base
    , bytestring
    , directory
    , filepath
    , mtl
    , optics
    , plutarch
    , plutus-context-builder
    , plutus-unit
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , tagged
    , tasty
    , text
    , uplc-benchmark-types-plutus-lb

library
  import:          lang, deps
  hs-source-dirs:  src
  exposed-modules:
    UplcBenchmark
    UplcBenchmark.ScriptLoader
    UplcBenchmark.Spec.ContextBuilder.Utils
    UplcBenchmark.Spec.LpPolicy
    UplcBenchmark.Spec.NftMarketplace
    UplcBenchmark.Spec.PoolNftPolicy
    UplcBenchmark.Spec.PoolValidator
    UplcBenchmark.ScriptSize
    UplcBenchmark.ExecutionUnits

test-suite uplc-benchmark-tests
  import:          lang, deps
  type:            exitcode-stdio-1.0
  build-depends:   uplc-benchmark
  main-is:         Spec.hs
  hs-source-dirs:  test

executable uplc-benchmark-data
  import:           lang, deps
  main-is:          Main.hs
  build-depends:    uplc-benchmark
  hs-source-dirs:   app
  default-language: GHC2021
  
