cabal-version:      3.4
name:               uplc-types
version:            0.1.0.0
license:            GPL-3.0-or-later
author:             t4ccer
maintainer:         t4ccer@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

library
    exposed-modules:
        LambdaBuffers.NftMarketplace.Plutarch
    autogen-modules:
        LambdaBuffers.NftMarketplace.Plutarch
    build-depends:
      , base
      , lbf-plutus-plutarch
      , lbf-prelude-plutarch
      , lbr-plutarch
      , plutarch
      , plutus-core < 1.4
    hs-source-dirs:   autogen
    default-language: GHC2021
