cabal-version:      3.0
name:               plutarch-implementation
version:            0.1.0.0
license:            GPL-3.0-or-later
author:             t4ccer
maintainer:         t4ccer@gmail.com
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md

library pprelude
  default-language: Haskell2010
  exposed-modules:  UplcBenchmark.PPrelude
  hs-source-dirs:   lib
  build-depends:
    , base
    , bytestring
    , plutarch

common lang
  ghc-options:
    -Werror -Wall -Weverything -Wno-unused-packages -Wno-unused-do-bind
    -Wno-missing-safe-haskell-mode -Wno-implicit-prelude -Wno-unsafe
    -Wno-all-missed-specialisations

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    QualifiedDo
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns

  default-language:   Haskell2010

common plutarch-prelude
  mixins:
    base hiding (Prelude),
    pprelude (UplcBenchmark.PPrelude as Prelude)

common exe-opts
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2

common deps
  build-depends:
    , base
    , bytestring
    , mtl
    , plutarch
    , plutus-core < 1.4
    , plutus-ledger-api
    , text
    , uplc-benchmark-types-plutarch-lb
    , pprelude
    , lbf-plutus-plutarch

library
  import:          lang, deps, plutarch-prelude
  exposed-modules:
    UplcBenchmark.NftMarketplace
    UplcBenchmark.LpMintingPolicy
    UplcBenchmark.NftMintingPolicy
    UplcBenchmark.PoolValidator
    UplcBenchmark.Utils

  hs-source-dirs:  lib

executable plutarch-implementation-export
    import:           lang, deps, exe-opts
    main-is:          Main.hs
    build-depends:
      , plutarch-implementation
    hs-source-dirs:   app
    default-language: GHC2021
