cabal-version:      3.0
name:               plutus-tx-implementation
version:            0.1.0.0
license:            GPL-3.0-or-later
author:             t4ccer
maintainer:         t4ccer@gmail.com
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common lang
  ghc-options:
    -Werror -Wall -Weverything -Wno-unused-packages -Wno-unused-do-bind
    -Wno-missing-safe-haskell-mode -Wno-implicit-prelude -Wno-unsafe
    -Wno-all-missed-specialisations

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    QualifiedDo
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns

  default-language:   Haskell2010

common exe-opts
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2

common deps
  build-depends:
    , base
    , bytestring
    , mtl
    , plutarch
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , text
    , uplc-benchmark-types-plutus-lb

library
  import:          lang, deps
  exposed-modules:
    UplcBenchmark.NftMarketplace
    UplcBenchmark.LpMintingPolicy
  other-modules:
    UplcBenchmark.Utils
  hs-source-dirs:  lib

executable plutus-tx-implementation-export
    import:           lang, deps, exe-opts
    main-is:          Main.hs
    build-depends:
      , plutus-tx-implementation
    hs-source-dirs:   app
    default-language: GHC2021
